# autonomous-team

./: .gitignore  create_working_function.py  deploy_cockpit_terraform.py  deploy_flask_application.py  deploy_full_autonomous_api.py  deploy_scaleway_containers.py  deploy_scaleway_functions_correct.py  deploy_serverless_functions.py  fix_container_deployment.py  fix_container_deployment_final.py  fix_serverless_deployment.py  simple_handler.py  team_recommended_next_steps.py
AI Collaboration Hub/: README.md
AI Collaboration Hub/infrastructure/: scaleway-infrastructure.yaml
AI Resource Manager/: .env.example  .gitignore  README.md
AI Resource Manager/backend/: requirements.txt
AI Resource Manager/backend/app/: __init__.py  config.py
Ambient Context System/: README.md
Ambient Context System/backend/: requirements.txt
Ambient Context System/backend/app/: main.py
Community Engagement System/: .env.example
Community Engagement System/backend/: requirements.txt
Context Capture System/: .env.example  docker-compose.yml
Creative Collaboration Hub/: .env.example  docker-compose.yml
Creative Flow AI/: .env.example  README.md  docker-compose.yml
Creative Flow AI/backend/: Dockerfile  requirements.txt
Creative Flow Predictor/: .env.example  Dockerfile.backend  docker-compose.yml  pyproject.toml
Creative Pattern Analytics Platform/: .env.example  docker-compose.yml
Creative Pattern Analytics Platform/backend/: Dockerfile  main.py  requirements.txt
Creativity Journal Integration/: .env.example  pyproject.toml
Creativity Journal Integration/app/: __init__.py  cache.py  config.py  database.py
Environmental Context Tracker/: .env.example  docker-compose.yml
Environmental Context Tracker/backend/: Dockerfile  main.py  requirements.txt
Insight Connector/: README.md
Insight Connector/backend/: requirements.txt
Insight Visualization Dashboard/: .env.example  docker-compose.yml
Knowledge Base System/: .env.example  docker-compose.yml
Knowledge Base System/backend/: Dockerfile  main.py  requirements.txt
Pattern-Based Recommendation Engine/: .env.example  Dockerfile.api  docker-compose.yml  pyproject.toml  requirements.txt
Pattern-Based Recommendation Engine/app/: main.py
Personal Insight Engine/: README.md
Personal Insight Engine/backend/: .env.example  requirements.txt
autonomous_team_workspace/: strands_voice_agent.py  usage_example.py
autonomous_team_workspace/.windsurf/: mcp.json  mcp_npx_config.json  serverless_mcp_config.json  settings.json  url_mcp_config.json
autonomous_team_workspace/config/: enterprise_features.yaml  expanded_features.yaml  multi_region.yaml  performance_optimizations.yaml  serverless_api.yaml  serverless_cache.yaml  serverless_database.yaml  serverless_monitoring.yaml  team_config.json  windsurf_mcp_config.json  windsurf_npx_mcp_config.json
autonomous_team_workspace/documentation/: AGENT_DELEGATION_PROGRESS.md  COCKPIT_LOGGING_SETUP.md  COMPLETE_DEPLOYMENT_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTAINER_DEPLOYMENT_FIXED.md  CURRENT_DEPLOYMENT_STATUS.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DEPLOYMENT_STATUS_FINAL.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_SERVERLESS_DEPLOYMENT.md  MCP_SCALEWAY_DEPLOYMENT.md  MCP_SERVER_DEPLOYMENT.md  NPX_WINDSURF_DEPLOYMENT.md  README.md  REAL_DEPLOYMENT_STATUS.md  SCALEWAY_CREDENTIALS_DEPLOYMENT.md  SCALEWAY_SPECIALIST_DEPLOYMENT_FINAL.md  SERVERLESS_FIRST_ARCHITECTURE.md  TEAM_AND_TOOLS_BUILT.md  deepwiki_integration.md  mcp_task_examples.json
autonomous_team_workspace/integration/: british_voices.json  cartesia_fixed.py
autonomous_team_workspace/repositories/: python_repos  strands_core  strands_docs
autonomous_team_workspace/scripts/: execute_mission.py  repository_access.sh
autonomous_team_workspace/teams/: container_deployment_team.py
autonomous_team_workspace/testing/: production_tests.yaml
autonomous_team_workspace/tools/: infj_adhd_patterns.py
autonomous_team_workspace/workflows/: documentation_first.py
continue-examples/: README.md  example1-generate-function.md  example2-refactor-code.md  example3-debug-error.md  example4-write-tests.md
docker-test/: Dockerfile  README.md  index.html
monitoring-agent/: Dockerfile  watch-mattermost.sh
python-calculator/: README.md  test_calculator.py
scaleway-mattermost/: Dockerfile  Dockerfile.mattermost  deploy.sh  serverless.yml
(+57 files in other folders)
