```toml
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "creative-flow-predictor"
version = "1.0.0"
description = "ML model that predicts optimal creative windows based on historical patterns"
authors = [{name = "Creative AI Team"}]
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
numpy = "^1.24.3"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
aioredis = "^2.0.1"
httpx = "^0.25.2"
cartesia = "^0.1.0"
boto3 = "^1.29.7"
python-dotenv = "^1.0.0"
alembic = "^1.13.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
sentry-sdk = "^1.38.0"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.12.0"
faker = "^21.0.0"
factory-boy = "^3.3.0"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
```